# MagicTable

./: LICENSE
app/FullMatchChess/: CMakeLists.txt  GameScreen.qml  Main.qml  MovingStep.qml  Players.qml  Rounds.qml  main.cpp
app/FullMatchChess/android/: AndroidManifest.xml
app/LeagueSummary/: CMakeLists.txt  Main.qml  main.cpp
app/MT_ChessQMLApp/: CMakeLists.txt  Main.qml  MovingStep.qml  main.cpp  qml.qrc
app/MT_ChessQMLApp/android/: AndroidManifest.xml
app/MT_QMLApp/: Common.js  DSAControl.qml  ListControl.qml  MT_QMLApp.pro  SortingControl.qml  TreeControl.qml  main.cpp  main.qml  qml.qrc
app/SpeedChessApp/: Background.qml  CMakeLists.txt  Main.qml  main.cpp
core/MT_Core/: MT_Atom.cpp  MT_Atom.h  MT_Core.pro  MT_Object.cpp  MT_Object.h  MT_Position.cpp  MT_Position.h  MT_RefObject.cpp  MT_RefObject.h  MT_Table.cpp  MT_Table.h  MT_Types.h
features/MT_Chess/: MT_Chess.cpp  MT_Chess.h  MT_Chess.pro  MT_Chess_Object.cpp  MT_Chess_Object.h  MT_KingChess.cpp  MT_KingChess.h
features/MT_DSA/: MT_DSA.pro  MT_DSA_AVLADT.cpp  MT_DSA_AVLADT.h  MT_DSA_BSTADT.cpp  MT_DSA_BSTADT.h  MT_DSA_DoublyLinkedList.cpp  MT_DSA_DoublyLinkedList.h  MT_DSA_HierarchicalTree.cpp  MT_DSA_HierarchicalTree.h  MT_DSA_LinkedList.cpp  MT_DSA_LinkedList.h  MT_DSA_List.cpp  MT_DSA_List.h  MT_DSA_ListADT.cpp  MT_DSA_ListADT.h  MT_DSA_Object.cpp  MT_DSA_Object.h  MT_DSA_Sorting.cpp  MT_DSA_Sorting.h  MT_DSA_SortingBubble.cpp  MT_DSA_SortingBubble.h  MT_DSA_SortingInsertion.cpp  MT_DSA_SortingInsertion.h  MT_DSA_SortingMerge.cpp  MT_DSA_SortingMerge.h  MT_DSA_SortingQuick.cpp  MT_DSA_SortingQuick.h  MT_DSA_SortingSelection.cpp  MT_DSA_SortingSelection.h  MT_DSA_TreeObject.cpp  MT_DSA_TreeObject.h
framework/MT_Chess_QML/: MT_Chess_QML.cpp  MT_Chess_QML.h  MT_Chess_QML.pro  MT_Chess_QMLEvalObject.cpp  MT_Chess_QMLEvalObject.h  MT_Chess_QMLObject.cpp  MT_Chess_QMLObject.h  MT_Chess_QMLPlugin.cpp  MT_Chess_QMLPlugin.h  MT_Chess_QMLPositionObject.cpp  MT_Chess_QMLPositionObject.h  MT_KingChess_QML.cpp  MT_KingChess_QML.h  qmldir
framework/MT_DSA_QML/: MT_DSA_QML.cpp  MT_DSA_QML.h  MT_DSA_QML.pro  MT_DSA_QMLArrowObject.cpp  MT_DSA_QMLArrowObject.h  MT_DSA_QMLLineObject.cpp  MT_DSA_QMLLineObject.h  MT_DSA_QMLList.cpp  MT_DSA_QMLList.h  MT_DSA_QMLListObject.cpp  MT_DSA_QMLListObject.h  MT_DSA_QMLObject.cpp  MT_DSA_QMLObject.h  MT_DSA_QMLPlugin.cpp  MT_DSA_QMLPlugin.h  MT_DSA_QMLTree.cpp  MT_DSA_QMLTree.h  MT_DSA_QMLTreeObject.cpp  MT_DSA_QMLTreeObject.h  qmldir
framework/MT_SummaryTable_QML/: MT_SummaryTable_QML.cpp  MT_SummaryTable_QML.h  MT_SummaryTable_QML.pro  MT_SummaryTable_QML_Object.cpp  MT_SummaryTable_QML_Object.h  MT_SummaryTable_QML_Plugin.cpp  MT_SummaryTable_QML_Plugin.h  qmldir
